fixed flip on firefox

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -266,6 +266,7 @@ nav#main_nav {
 .flip-container, .front, .back {
   width: 100%;
   height: 250px;
+  transform: rotateX(0deg)
 }
 
 /* flip speed goes here */
